[gd_scene load_steps=9 format=3 uid="uid://b8iw5bkiu8foh"]

[ext_resource type="Script" path="res://src/npc/npc.gd" id="1_1jh0m"]
[ext_resource type="Texture2D" uid="uid://b5atk3wx43hqm" path="res://assets/imgs/NPC-Sheet.png" id="1_fepdb"]
[ext_resource type="PackedScene" uid="uid://clhyab4f2j1lf" path="res://src/npc/speech_balloon.tscn" id="3_4fq45"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8xj3m"]
atlas = ExtResource("1_fepdb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmxia"]
atlas = ExtResource("1_fepdb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_30fd5"]
atlas = ExtResource("1_fepdb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr23l"]
atlas = ExtResource("1_fepdb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_luq1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmxia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xj3m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30fd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr23l")
}],
"loop": true,
"name": &"talking",
"speed": 5.0
}]

[node name="NPC" type="Node2D"]
script = ExtResource("1_1jh0m")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_luq1d")

[node name="SpeechBalloon" parent="." instance=ExtResource("3_4fq45")]
visible = false
offset_left = -16.0
offset_top = -80.0
offset_right = 16.0
offset_bottom = -32.0

[node name="SongTrialTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="FurEliseTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[connection signal="finished_speech" from="SpeechBalloon" to="." method="_on_speech_balloon_finished_speech"]
[connection signal="finished_typing" from="SpeechBalloon" to="." method="_on_speech_balloon_finished_typing"]
[connection signal="timeout" from="SongTrialTimer" to="." method="_on_song_trial_timer_timeout"]
[connection signal="timeout" from="FurEliseTimer" to="." method="_on_fur_elise_timer_timeout"]
